Vector: Workaround for legacy IE font-sizing issues
In IE <= 7, 'Ctrl' + '+' scales the font size in far too large steps if the
root element's font size is given in the 'em' unit. Everything becomes normal
if the root element's font-size is given in '%'. This should not have any
effect in other browsers.

Bug: 24515

--- a/skins/vector/variables.less
+++ b/skins/vector/variables.less
@@ -1,4 +1,4 @@
-@html-font-size: 1em;
+@html-font-size: 100%;
 
 // Page content
 // FIXME: Use global variable since Echo and CentralNotice use this variable
